cleanly add retro-fma submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "Rushes/Libunit"]
 	path = Rushes/Libunit
 	url = https://github.com/Chahalor/Libunit
+[submodule "Rushes/Retro-MFA"]
+	path = Rushes/Retro-MFA
+	url = https://github.com/Chahalor/Retro-MFA
