cpp06/ex00: finished

--- a/cpp/cpp-6/ex00/Makefile
+++ b/cpp/cpp-6/ex00/Makefile
@@ -1,4 +1,4 @@
-NAME		:= bureaucrat
+NAME		:= scalarconverter
 CXX			:= c++
 CXXFLAGS	:= -Wall -Wextra -Werror -Wno-deprecated -MMD -g3 -Iall -Iheaders
 
