--- a/cpp/cpp-7/ex00/Makefile
+++ b/cpp/cpp-7/ex00/Makefile
@@ -1,4 +1,4 @@
-NAME		:= baseator2000
+NAME		:= templar
 CXX			:= c++
 CXXFLAGS	:= -std=c++98  -Wall -Wextra -Werror -Wno-deprecated -MMD -g3 -Iall -Iheaders
 
