--- a/cpp/cpp-8/ex00/Makefile
+++ b/cpp/cpp-8/ex00/Makefile
@@ -1,4 +1,4 @@
-NAME		:= array
+NAME		:= easyfind
 CXX			:= c++
 CXXFLAGS	:= -std=c++98  -Wall -Wextra -Werror -Wno-deprecated -MMD -g3 -Iall -Iheaders
 
@@ -7,7 +7,7 @@ DIR_BUILD	:= .build/
 DIR_ALL		:= all/
 
 ALL			:= $(DIR_ALL)/all.a
-SRCS		:=
+SRCS		:= easyfind.cpp
 _SRC		:= $(addprefix src/, $(SRCS)) main.cpp
 
 OBJS		:= $(_SRC:.cpp=.o)
