--- a/cpp/cpp-8/ex00/all/makefile
+++ b/cpp/cpp-8/ex00/all/makefile
@@ -1,14 +1,14 @@
 NAME		= all.a
 
-CC			?= c++
-CFLAGS		?= -Wall -Wextra -Werror -Wno-deprecated -std=c++98 -MMD -I.
+CXX			?= c++
+CXXFLAGS	?= -Wall -Wextra -Werror -Wno-deprecated -std=c++98 -MMD -I.
 AR			?= ar rcs
 
 DIR_BUILD	:= .build/
 DIR_SRC		:= .
 DIR_INC		:= .
 
-SRCS		:= string.cpp atoi.cpp itoa.cpp
+SRCS		:= string.cpp atoi.cpp itoa.cpp random.cpp
 
 _OBJS		:= $(SRCS:.cpp=.o)
 OBJS		:= $(addprefix $(DIR_BUILD), $(_OBJS))
@@ -25,7 +25,7 @@ $(NAME): $(OBJS)
 	$(AR) rcs $@ $^
 
 $(DIR_BUILD)%.o: $(DIR_SRC)/%.cpp
-	$(CC) $(CFLAGS) -c $< -o $@
+	$(CXX) $(CXXFLAGS) -c $< -o $@
 
 clean:
 	rm -rf $(OBJS)
