--- a/cpp/cpp-9/ex00/Makefile
+++ b/cpp/cpp-9/ex00/Makefile
@@ -7,7 +7,7 @@ DIR_BUILD	:= .build/
 DIR_ALL		:= all/
 
 ALL			:= $(DIR_ALL)/all.a
-SRCS		:=
+SRCS		:= BitcoinExchange.cpp
 _SRC		:= $(addprefix src/, $(SRCS)) main.cpp
 
 OBJS		:= $(_SRC:.cpp=.o)
