fix otehr shitty thing

--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "Rushes/Retro-MFA"]
 	path = Rushes/Retro-MFA
 	url = https://github.com/Chahalor/Retro-MFA
+[submodule "rank-5/inception"]
+	path = rank-5/inception
+	url = https://github.com/Chahalor/Inception.git
